mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/using/erc7201_builtin_as_custom_operator.sol
using {erc7201 as -} for uint;
// ----
// TypeError 8187: (7-14): Expected function name.
